foreman/kb/knowledge_parser.go
// Code generated from Knowledge.g4 by ANTLR 4.7.2. DO NOT EDIT.

package kb // Knowledge
import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'*'", "'('", "')'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='",
	"'&'", "'|'", "','", "';'",
}
var symbolicNames = []string{
	"", "ASTERISK", "BS", "BE", "DEQ", "NEQ", "LT", "LE", "GT", "GE", "AND",
	"OR", "COMMA", "SEMICOLON", "WS", "IDENTIFIER", "STRING", "NUMBER", "REAL",
}

var ruleNames = []string{
	"knowledge", "clauses", "clause", "formulas", "formula", "leftOperand",
	"rightOperand", "operand", "literalOperand", "variableOperand", "operator",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type KnowledgeParser struct {
	*antlr.BaseParser
}

func NewKnowledgeParser(input antlr.TokenStream) *KnowledgeParser {
	this := new(KnowledgeParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Knowledge.g4"

	return this
}

// KnowledgeParser tokens.
const (
	KnowledgeParserEOF        = antlr.TokenEOF
	KnowledgeParserASTERISK   = 1
	KnowledgeParserBS         = 2
	KnowledgeParserBE         = 3
	KnowledgeParserDEQ        = 4
	KnowledgeParserNEQ        = 5
	KnowledgeParserLT         = 6
	KnowledgeParserLE         = 7
	KnowledgeParserGT         = 8
	KnowledgeParserGE         = 9
	KnowledgeParserAND        = 10
	KnowledgeParserOR         = 11
	KnowledgeParserCOMMA      = 12
	KnowledgeParserSEMICOLON  = 13
	KnowledgeParserWS         = 14
	KnowledgeParserIDENTIFIER = 15
	KnowledgeParserSTRING     = 16
	KnowledgeParserNUMBER     = 17
	KnowledgeParserREAL       = 18
)

// KnowledgeParser rules.
const (
	KnowledgeParserRULE_knowledge       = 0
	KnowledgeParserRULE_clauses         = 1
	KnowledgeParserRULE_clause          = 2
	KnowledgeParserRULE_formulas        = 3
	KnowledgeParserRULE_formula         = 4
	KnowledgeParserRULE_leftOperand     = 5
	KnowledgeParserRULE_rightOperand    = 6
	KnowledgeParserRULE_operand         = 7
	KnowledgeParserRULE_literalOperand  = 8
	KnowledgeParserRULE_variableOperand = 9
	KnowledgeParserRULE_operator        = 10
)

// IKnowledgeContext is an interface to support dynamic dispatch.
type IKnowledgeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsKnowledgeContext differentiates from other interfaces.
	IsKnowledgeContext()
}

type KnowledgeContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyKnowledgeContext() *KnowledgeContext {
	var p = new(KnowledgeContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = KnowledgeParserRULE_knowledge
	return p
}

func (*KnowledgeContext) IsKnowledgeContext() {}

func NewKnowledgeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *KnowledgeContext {
	var p = new(KnowledgeContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = KnowledgeParserRULE_knowledge

	return p
}

func (s *KnowledgeContext) GetParser() antlr.Parser { return s.parser }

func (s *KnowledgeContext) Clauses() IClausesContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IClausesContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IClausesContext)
}

func (s *KnowledgeContext) BS() antlr.TerminalNode {
	return s.GetToken(KnowledgeParserBS, 0)
}

func (s *KnowledgeContext) BE() antlr.TerminalNode {
	return s.GetToken(KnowledgeParserBE, 0)
}

func (s *KnowledgeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *KnowledgeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *KnowledgeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KnowledgeListener); ok {
		listenerT.EnterKnowledge(s)
	}
}

func (s *KnowledgeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KnowledgeListener); ok {
		listenerT.ExitKnowledge(s)
	}
}

func (p *KnowledgeParser) Knowledge() (localctx IKnowledgeContext) {
	localctx = NewKnowledgeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, KnowledgeParserRULE_knowledge)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(23)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(22)
			p.Match(KnowledgeParserBS)
		}

	}
	{
		p.SetState(25)
		p.Clauses()
	}
	p.SetState(27)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == KnowledgeParserBE {
		{
			p.SetState(26)
			p.Match(KnowledgeParserBE)
		}

	}

	return localctx
}

// IClausesContext is an interface to support dynamic dispatch.
type IClausesContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsClausesContext differentiates from other interfaces.
	IsClausesContext()
}

type ClausesContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyClausesContext() *ClausesContext {
	var p = new(ClausesContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = KnowledgeParserRULE_clauses
	return p
}

func (*ClausesContext) IsClausesContext() {}

func NewClausesContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ClausesContext {
	var p = new(ClausesContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = KnowledgeParserRULE_clauses

	return p
}

func (s *ClausesContext) GetParser() antlr.Parser { return s.parser }

func (s *ClausesContext) AllClause() []IClauseContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IClauseContext)(nil)).Elem())
	var tst = make([]IClauseContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IClauseContext)
		}
	}

	return tst
}

func (s *ClausesContext) Clause(i int) IClauseContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IClauseContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IClauseContext)
}

func (s *ClausesContext) AllOR() []antlr.TerminalNode {
	return s.GetTokens(KnowledgeParserOR)
}

func (s *ClausesContext) OR(i int) antlr.TerminalNode {
	return s.GetToken(KnowledgeParserOR, i)
}

func (s *ClausesContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ClausesContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ClausesContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KnowledgeListener); ok {
		listenerT.EnterClauses(s)
	}
}

func (s *ClausesContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KnowledgeListener); ok {
		listenerT.ExitClauses(s)
	}
}

func (p *KnowledgeParser) Clauses() (localctx IClausesContext) {
	localctx = NewClausesContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, KnowledgeParserRULE_clauses)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(29)
		p.Clause()
	}
	p.SetState(34)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == KnowledgeParserOR {
		{
			p.SetState(30)
			p.Match(KnowledgeParserOR)
		}
		{
			p.SetState(31)
			p.Clause()
		}

		p.SetState(36)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IClauseContext is an interface to support dynamic dispatch.
type IClauseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsClauseContext differentiates from other interfaces.
	IsClauseContext()
}

type ClauseContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyClauseContext() *ClauseContext {
	var p = new(ClauseContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = KnowledgeParserRULE_clause
	return p
}

func (*ClauseContext) IsClauseContext() {}

func NewClauseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ClauseContext {
	var p = new(ClauseContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = KnowledgeParserRULE_clause

	return p
}

func (s *ClauseContext) GetParser() antlr.Parser { return s.parser }

func (s *ClauseContext) Formulas() IFormulasContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFormulasContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFormulasContext)
}

func (s *ClauseContext) BS() antlr.TerminalNode {
	return s.GetToken(KnowledgeParserBS, 0)
}

func (s *ClauseContext) BE() antlr.TerminalNode {
	return s.GetToken(KnowledgeParserBE, 0)
}

func (s *ClauseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ClauseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ClauseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KnowledgeListener); ok {
		listenerT.EnterClause(s)
	}
}

func (s *ClauseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KnowledgeListener); ok {
		listenerT.ExitClause(s)
	}
}

func (p *KnowledgeParser) Clause() (localctx IClauseContext) {
	localctx = NewClauseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, KnowledgeParserRULE_clause)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(38)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(37)
			p.Match(KnowledgeParserBS)
		}

	}
	{
		p.SetState(40)
		p.Formulas()
	}
	p.SetState(42)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(41)
			p.Match(KnowledgeParserBE)
		}

	}

	return localctx
}

// IFormulasContext is an interface to support dynamic dispatch.
type IFormulasContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFormulasContext differentiates from other interfaces.
	IsFormulasContext()
}

type FormulasContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFormulasContext() *FormulasContext {
	var p = new(FormulasContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = KnowledgeParserRULE_formulas
	return p
}

func (*FormulasContext) IsFormulasContext() {}

func NewFormulasContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FormulasContext {
	var p = new(FormulasContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = KnowledgeParserRULE_formulas

	return p
}

func (s *FormulasContext) GetParser() antlr.Parser { return s.parser }

func (s *FormulasContext) AllFormula() []IFormulaContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IFormulaContext)(nil)).Elem())
	var tst = make([]IFormulaContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IFormulaContext)
		}
	}

	return tst
}

func (s *FormulasContext) Formula(i int) IFormulaContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFormulaContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IFormulaContext)
}

func (s *FormulasContext) AllAND() []antlr.TerminalNode {
	return s.GetTokens(KnowledgeParserAND)
}

func (s *FormulasContext) AND(i int) antlr.TerminalNode {
	return s.GetToken(KnowledgeParserAND, i)
}

func (s *FormulasContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FormulasContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FormulasContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KnowledgeListener); ok {
		listenerT.EnterFormulas(s)
	}
}

func (s *FormulasContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KnowledgeListener); ok {
		listenerT.ExitFormulas(s)
	}
}

func (p *KnowledgeParser) Formulas() (localctx IFormulasContext) {
	localctx = NewFormulasContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, KnowledgeParserRULE_formulas)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(44)
		p.Formula()
	}
	p.SetState(49)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == KnowledgeParserAND {
		{
			p.SetState(45)
			p.Match(KnowledgeParserAND)
		}
		{
			p.SetState(46)
			p.Formula()
		}

		p.SetState(51)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IFormulaContext is an interface to support dynamic dispatch.
type IFormulaContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFormulaContext differentiates from other interfaces.
	IsFormulaContext()
}

type FormulaContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFormulaContext() *FormulaContext {
	var p = new(FormulaContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = KnowledgeParserRULE_formula
	return p
}

func (*FormulaContext) IsFormulaContext() {}

func NewFormulaContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FormulaContext {
	var p = new(FormulaContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = KnowledgeParserRULE_formula

	return p
}

func (s *FormulaContext) GetParser() antlr.Parser { return s.parser }

func (s *FormulaContext) LeftOperand() ILeftOperandContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ILeftOperandContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ILeftOperandContext)
}

func (s *FormulaContext) Operator() IOperatorContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IOperatorContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IOperatorContext)
}

func (s *FormulaContext) RightOperand() IRightOperandContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IRightOperandContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IRightOperandContext)
}

func (s *FormulaContext) BS() antlr.TerminalNode {
	return s.GetToken(KnowledgeParserBS, 0)
}

func (s *FormulaContext) BE() antlr.TerminalNode {
	return s.GetToken(KnowledgeParserBE, 0)
}

func (s *FormulaContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FormulaContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FormulaContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KnowledgeListener); ok {
		listenerT.EnterFormula(s)
	}
}

func (s *FormulaContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KnowledgeListener); ok {
		listenerT.ExitFormula(s)
	}
}

func (p *KnowledgeParser) Formula() (localctx IFormulaContext) {
	localctx = NewFormulaContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, KnowledgeParserRULE_formula)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(53)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == KnowledgeParserBS {
		{
			p.SetState(52)
			p.Match(KnowledgeParserBS)
		}

	}
	{
		p.SetState(55)
		p.LeftOperand()
	}
	{
		p.SetState(56)
		p.Operator()
	}
	{
		p.SetState(57)
		p.RightOperand()
	}
	p.SetState(59)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 7, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(58)
			p.Match(KnowledgeParserBE)
		}

	}

	return localctx
}

// ILeftOperandContext is an interface to support dynamic dispatch.
type ILeftOperandContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsLeftOperandContext differentiates from other interfaces.
	IsLeftOperandContext()
}

type LeftOperandContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyLeftOperandContext() *LeftOperandContext {
	var p = new(LeftOperandContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = KnowledgeParserRULE_leftOperand
	return p
}

func (*LeftOperandContext) IsLeftOperandContext() {}

func NewLeftOperandContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *LeftOperandContext {
	var p = new(LeftOperandContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = KnowledgeParserRULE_leftOperand

	return p
}

func (s *LeftOperandContext) GetParser() antlr.Parser { return s.parser }

func (s *LeftOperandContext) Operand() IOperandContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IOperandContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IOperandContext)
}

func (s *LeftOperandContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LeftOperandContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *LeftOperandContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KnowledgeListener); ok {
		listenerT.EnterLeftOperand(s)
	}
}

func (s *LeftOperandContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KnowledgeListener); ok {
		listenerT.ExitLeftOperand(s)
	}
}

func (p *KnowledgeParser) LeftOperand() (localctx ILeftOperandContext) {
	localctx = NewLeftOperandContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, KnowledgeParserRULE_leftOperand)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(61)
		p.Operand()
	}

	return localctx
}

// IRightOperandContext is an interface to support dynamic dispatch.
type IRightOperandContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsRightOperandContext differentiates from other interfaces.
	IsRightOperandContext()
}

type RightOperandContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRightOperandContext() *RightOperandContext {
	var p = new(RightOperandContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = KnowledgeParserRULE_rightOperand
	return p
}

func (*RightOperandContext) IsRightOperandContext() {}

func NewRightOperandContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RightOperandContext {
	var p = new(RightOperandContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = KnowledgeParserRULE_rightOperand

	return p
}

func (s *RightOperandContext) GetParser() antlr.Parser { return s.parser }

func (s *RightOperandContext) Operand() IOperandContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IOperandContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IOperandContext)
}

func (s *RightOperandContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RightOperandContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RightOperandContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KnowledgeListener); ok {
		listenerT.EnterRightOperand(s)
	}
}

func (s *RightOperandContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KnowledgeListener); ok {
		listenerT.ExitRightOperand(s)
	}
}

func (p *KnowledgeParser) RightOperand() (localctx IRightOperandContext) {
	localctx = NewRightOperandContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, KnowledgeParserRULE_rightOperand)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(63)
		p.Operand()
	}

	return localctx
}

// IOperandContext is an interface to support dynamic dispatch.
type IOperandContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsOperandContext differentiates from other interfaces.
	IsOperandContext()
}

type OperandContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyOperandContext() *OperandContext {
	var p = new(OperandContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = KnowledgeParserRULE_operand
	return p
}

func (*OperandContext) IsOperandContext() {}

func NewOperandContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *OperandContext {
	var p = new(OperandContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = KnowledgeParserRULE_operand

	return p
}

func (s *OperandContext) GetParser() antlr.Parser { return s.parser }

func (s *OperandContext) LiteralOperand() ILiteralOperandContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ILiteralOperandContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ILiteralOperandContext)
}

func (s *OperandContext) VariableOperand() IVariableOperandContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVariableOperandContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IVariableOperandContext)
}

func (s *OperandContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *OperandContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *OperandContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KnowledgeListener); ok {
		listenerT.EnterOperand(s)
	}
}

func (s *OperandContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KnowledgeListener); ok {
		listenerT.ExitOperand(s)
	}
}

func (p *KnowledgeParser) Operand() (localctx IOperandContext) {
	localctx = NewOperandContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 14, KnowledgeParserRULE_operand)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(67)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case KnowledgeParserNUMBER, KnowledgeParserREAL:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(65)
			p.LiteralOperand()
		}

	case KnowledgeParserIDENTIFIER:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(66)
			p.VariableOperand()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}
